fix navbar caret alignment

--- a/app/_assets/stylesheets/header-v2.less
+++ b/app/_assets/stylesheets/header-v2.less
@@ -188,7 +188,8 @@ header.navbar-v2 {
           justify-content: space-between;
 
           .caret {
-            margin: 0;
+            margin-left: 0;
+            margin-top: 25px;
 
             @media (min-width: 1100px) {
               display: none;
